# CableDrivenRobot-TFG

./: README.md
csv/: direct_kinematic_validation_4seg.csv  inverse_kinematic_validation_4seg.csv
meshes/: base.stl  pulley.stl  pulley_down.stl  pulley_up.stl  segment.stl
parts/: Sin nombre.20260414-171409.FCBak  Sin nombre.FCStd  assembly_arm.20260413-202346.FCBak  assembly_arm.20260414-184414.FCBak  assembly_arm.20260421-181619.FCBak  assembly_arm.20260422-145726.FCBak  assembly_arm.FCStd  assembly_base.20260423-161504.FCBak  assembly_base.FCStd  base.20260413-191021.FCBak  base.20260414-184051.FCBak  base.20260420-134210.FCBak  base.20260423-161506.FCBak  base.FCStd  base_with_motors.20260413-193506.FCBak  base_with_motors.20260414-181708.FCBak  base_with_motors.FCStd  bearing.20260420-134210.FCBak  bearing.FCStd  bearing_holder.20260420-133634.FCBak  bearing_holder.FCStd  central_body.20260413-193506.FCBak  central_body.20260414-181811.FCBak  central_body.20260417-173836.FCBak  central_body.FCStd  complete_arm.20260413-104806.FCBak  complete_arm.FCStd  holder.20260421-175352.FCBak  holder.20260423-154228.FCBak  holder.FCStd  ijbijbpjk.20260420-182403.FCBak  ijbijbpjk.FCStd  mechanism_assembly.20260421-180741.FCBak  mechanism_assembly.20260423-161202.FCBak  mechanism_assembly.FCStd  pulley.FCStd  pulley_1.FCStd  pulley_2.FCStd  segment.20260413-200232.FCBak  segment.20260414-181842.FCBak  (+18 more)
ros2_ws/src/cable_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/cable_robot_bringup/launch/: bringup.launch.py
ros2_ws/src/cable_robot_description/: package.xml  setup.py
ros2_ws/src/cable_robot_description/launch/: view_robot.launch.py
ros2_ws/src/cable_robot_description/meshes/: base.stl  holder.stl  servo_bottom_mount.stl
ros2_ws/src/cable_robot_description/rviz/: view_robot.rviz
ros2_ws/src/cable_robot_description/urdf/: cable_robot.urdf.xacro
ros2_ws/src/cable_robot_kinematics/: CMakeLists.txt  package.xml
ros2_ws/src/cable_robot_kinematics/include/cable_robot_kinematics/: continuum_kinematics.hpp
ros2_ws/src/cable_robot_kinematics/src/: cable_bend_bridge.cpp  cable_slider_gui.py  continuum_kinematics.cpp  fk_bridge.cpp  ik_bridge.cpp  joint_state_combiner.cpp
scenes/: cinematic_3d_validation.ttt  kinematic_3d_validation_complete_arm.ttt  simulation_parallel_behavior.ttt
scripts/: plot_direct_kinematics.py  plot_generic.py  plot_inverse_kinematics.py
