<?xml version="1.0"?>
<package format="3">
  <name>cable_robot_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the cable-driven robot.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>cable_robot_kinematics</exec_depend>
  <exec_depend>cable_robot_description</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
